public interface IVisitaDAO {
    void guardar(VisitaProgramada visita);
}