public class AccesoDAOMySQL {
    private Connection dbConn;

}