public class Caracteristica {
    private double areaMetrosCuadrados;
    private int numeroHabitaciones;

}