public class CasoFortuito {
    private String idCaso;
    private String tipo;
    private String descripcion;
    private Date fecha;

}