public class Comunicacion {
    private String idComunicacion;
    private String asunto;
    private String contenido;
    private Date fechaEnvio;

}