public class DeudaDAOMySQL {
    private Connection dbConn;

}