public class EspacioComun {
    private String nombreEspacio;
    private int aforoMaximo;

}