public class GastoDAOMySQL {
    private Connection dbConn;

}