public interface IAccesoDAO {
    void guardarRegistro(RegistroEntrada registro);
}