public interface ICasoFortuitoDAO {
    void guardarIncidente(CasoFortuito caso);
}