public interface IGastoDAO {
    void guardar(Gasto gasto);
}