public interface IMensajeDAO {
    void guardar(Comunicacion comunicacion);
}