public class Inmueble {
    private String idInmueble;
    private String codigo;
    private String estado;

    private Caracteristica caracteristica;

}