public class PagoDAOMySQL {
    private Connection dbConn;

}