public class Parqueadero {
    private String numero;
    private String tipo;

}