public class RegistroEntrada {
    private Date fechaHoraLlegada;
    private String tipoEntrada;
    private String observaciones;

}