public class Reserva {
    private String idReserva;
    private Date fechaReserva;
    private Time horaInicio;
    private Time horaFin;
    private String estado;

}