public class ReservaDAOMySQL {
    private Connection dbConn;

}