public class UnidadPrivada {
    private double alicuotaBase;
    private boolean enAlquiler;

}