public class Usuario {
    private String idUsuario;
    private String identificacion;
    private String nombre;
    private String apellido;
    private String correo;
    private String telefono;

}