public class VisitaDAOMySQL {
    private Connection dbConn;

}