public class VisitaProgramada {
    private Date fechaHora;
    private String motivo;
    private String estado;

}