public class Visitante {
    private String identificacion;
    private String nombre;
    private String placaVehiculo;

}