@startuml C4_Class_Diagram_Sistema_Condominio_Completo
skinparam classAttributeIconSize 0
skinparam nodesep 40
skinparam ranksep 50
skinparam packageStyle rectangle

title Arquitectura Detallada Completa (MVC Capa 3) - Sistema Condominio

' ── PALETA DE COLORES PERSONALIZADA ──
skinparam class {
    BackgroundColor #E8F1FF
    BorderColor #2F5EA8
    ArrowColor #2F5EA8
    FontColor #1F3F73
}
skinparam interface {
    BackgroundColor #EEF5FF
    BorderColor #1F3F73
    FontColor #1F3F73
}
skinparam enum {
    BackgroundColor #F5F9FF
    BorderColor #1F3F73
    FontColor #1F3F73
}

' ==========================================
' CAPA 1: PRESENTACION (CONTROLADORES JAVAFX)
' ==========================================
package "Capa de Presentacion (Controladores JavaFX)" {

    class ControladorDeudas {
        - servicioFinanzas: IServicioFinanzas
        + registrarDeudaUI(): void
        + modificarFechaMaximaDePagoUI(): void
        + eliminarDeudaUI(): void
        + consultarDeudaUI(): void
        + solicitarPagoEnCuotasUI(): void
    }

    class ControladorPagosGastos {
        - servicioFinanzas: IServicioFinanzas
        + pagarDeudaUI(): void
        + registrarPagoEfectivoTransferenciaUI(): void
        + registrarPagosCondominioUI(): void
        + consultarPagosEfectuadosUI(): void
    }

    class ControladorReportesFinancieros {
        - servicioFinanzas: IServicioFinanzas
        + generarReportePagosRealizadosUI(): void
        + generarReporteGastosUI(): void
        + generarReporteRendicionCuentasUI(): void
        + generarCertificadoNoDeudorUI(): void
    }

    class ControladorInmuebles {
        - servicioInmuebles: IServicioInmuebles
        + registrarInmuebleUI(): void
        + cambiarEstadoUI(): void
        + actualizarCatalogoUI(): void
    }

    class ControladorCasosFortuitos {
        - servicioInmuebles: IServicioInmuebles
        + procesarIncidenciaUI(): void
    }

    class ControladorReservas {
        - servicioReservas: IServicioReservas
        + cancelarReserva(...): void
        + abrirPanelObservacion(...): void
        + filtrarReservas(...): void
        + registrarObservacion(...): void
        + generarSolicitudReservaUI(...): boolean
    }

    class ControladorGarita {
        - servicioSeguridad: IServicioSeguridad
        + registrarEntradaVisitanteUI(): void
        + registrarEntradaResidenteUI(): void
        + asignarParqueaderoVisitaUI(): void
    }

    class ControladorComunicaciones {
        - servicioComunicaciones: IServicioComunicaciones
        + enviarMensajeAResidentesUI(): void
        + enviarComunicadoATrabajadoresUI(): void
        + crearAnuncioGeneralUI(): void
    }
}

' ==========================================
' CAPA 2: NEGOCIO (SERVICIOS / CASOS DE USO)
' ==========================================
package "Capa de Logica de Negocio (Servicios)" {

    interface IServicioFinanzas {
        + registrarDeuda(idUsr: String, mot: String, fMax: Date, desc: String, val: double): String
        + procesarPago(idDeuda: String, met: String, comp: String, val: double): String
        + consultarDeuda(idUsr: String): List<Deuda>
        + registrarGastoCondominio(f: Date, val: double, mot: String, desc: String): String
        + generarRendicionCuentas(inicio: Date, fin: Date): Reporte
    }

    class ServicioFinanzasImpl {
        - deudaDAO: IDeudaDAO
        - pagoDAO: IPagoDAO
        - gastoDAO: IGastoDAO
    }

    interface IServicioInmuebles {
        + registrarInmueble(cod: String, est: String, tipo: String): boolean
        + cambiarEstadoPropiedad(idInm: String, nuevoEst: String): void
        + procesarCasoFortuito(tipo: String, desc: String, f: Date): void
        + parametrizarCatalogo(): List<Inmueble>
    }

    class ServicioInmueblesImpl {
        - inmuebleDAO: IInmuebleDAO
        - casoFortuitoDAO: ICasoFortuitoDAO
    }

    interface IServicioReservas {
        + crearReserva(...): boolean
        + cancelarReserva(idReserva: int): boolean
        + agregarObservacion(idReserva: int, autor: String, obs: String): void
        + obtenerTodasReservas(): List<Reserva>
    }

    class ServicioReservasImpl {
        - reservaDAO: IReservaDAO
        - observacionDAO: IObservacionReservaDAO
        - servicioInmuebles: IInmueblesService
        - fachadaFinanzas: IFachadaParaReservas
        + getInstancia(): ServicioReservasImpl
    }

    interface IServicioSeguridad {
        + registrarIngresoPersona(id: String, nom: String, tipo: String, mot: String): void
        + programarVisita(idUsr: String, idVis: String, fHora: Date): void
        + consultarDisponibilidadParqueaderos(): int
    }

    class ServicioSeguridadImpl {
        - accesoDAO: IAccesoDAO
        - visitaDAO: IVisitaDAO
    }

    interface IServicioComunicaciones {
        + enviarMensaje(asu: String, cont: String, tipo: String, dest: List<String>): void
        + crearAnuncioGeneral(tit: String, cont: String): void
        + registrarHistorial(det: String): void
    }

    class ServicioComunicacionesImpl {
        - mensajeDAO: IMensajeDAO
        - anuncioDAO: IAnuncioDAO
        - historialDAO: IHistorialDAO
    }

    class SistemaAutomatizadoScheduler {
        - servicioFinanzas: IServicioFinanzas
        + registrarDeudaAlicuotaMensual(): void
        + enviarRecordatorioDeudaPendiente(): void
        + registrarMoraDeuda(): void
    }
}

' ==========================================
' CAPA 3: ACCESO A DATOS (DAO - MYSQL)
' ==========================================
package "Capa de Acceso a Datos (DAOs)" {

    interface IDeudaDAO {
        + guardar(deuda: Deuda): void
        + buscarPorId(id: String): Deuda
        + buscarPorUsuario(idUsuario: String): List<Deuda>
    }
    class DeudaDAOMySQL {
        - dbConn: Connection
    }

    interface IPagoDAO {
        + guardar(pago: Pago): void
        + buscarPorRangoFechas(ini: Date, fin: Date): List<Pago>
    }
    class PagoDAOMySQL {
        - dbConn: Connection
    }

    interface IGastoDAO {
        + guardar(gasto: Gasto): void
    }
    class GastoDAOMySQL {
        - dbConn: Connection
    }

    interface IInmuebleDAO {
        + guardar(inmueble: Inmueble): void
        + buscarPorCodigo(codigo: String): Inmueble
        + listarTodo(): List<Inmueble>
    }
    class InmuebleDAOMySQL {
        - dbConn: Connection
    }

    interface ICasoFortuitoDAO {
        + guardarIncidente(caso: CasoFortuito): void
    }
    class CasoFortuitoDAOMySQL {
        - dbConn: Connection
    }

    interface IReservaDAO {
        + guardar(reserva: Reserva): void
        + actualizar(reserva: Reserva): void
        + buscarPorUsuario(idUsuario: String): List<Reserva>
    }
    class ReservaDAOMySQL {
        - dbConn: Connection
    }

    interface IAccesoDAO {
        + guardarRegistro(registro: RegistroEntrada): void
    }
    class AccesoDAOMySQL {
        - dbConn: Connection
    }

    interface IVisitaDAO {
        + guardar(visita: VisitaProgramada): void
    }
    class VisitaDAOMySQL {
        - dbConn: Connection
    }

    interface IMensajeDAO {
        + guardar(comunicacion: Comunicacion): void
    }
    class MensajeDAOMySQL {
        - dbConn: Connection
    }
}

' ==========================================
' CAPA 4: ENTIDADES DE DOMINIO (NUCLEO)
' ==========================================
package "Capa de Dominio (Entidades)" {

    class Usuario {
        - idUsuario: String
        - identificacion: String
        - nombre: String
        - apellido: String
        - correo: String
        - telefono: String
    }

    abstract class Inmueble {
        - idInmueble: String
        - codigo: String
        - estado: String
    }

    class UnidadPrivada {
        - alicuotaBase: double
        - enAlquiler: boolean
    }

    class Caracteristica {
        - areaMetrosCuadrados: double
        - numeroHabitaciones: int
    }

    abstract class EspacioComun {
        - nombreEspacio: String
        - aforoMaximo: int
    }

    class SalonDeEventos {
        - costoReserva: double
    }
    
    class AreaRecreacional {
        - tipoCancha: String
    }
    
    class Parqueadero {
        - numero: String
        - tipo: String
    }

    class Deuda {
        - idDeuda: String
        - motivo: String
        - valor: double
        - fechaMaximaPago: Date
        - estado: String
    }

    class Pago {
        - idPago: String
        - fechaPago: Date
        - metodo: String
        - comprobanteTransferencia: String
        - valorPagado: double
    }

    class Gasto {
        - idGasto: String
        - fechaGasto: Date
        - valor: double
        - motivo: String
    }

    class Reserva {
        - idReserva: String
        - fechaReserva: Date
        - horaInicio: Time
        - horaFin: Time
        - estado: String
    }

    class Visitante {
        - identificacion: String
        - nombre: String
        - placaVehiculo: String
    }

    class VisitaProgramada {
        - fechaHora: Date
        - motivo: String
        - estado: String
    }

    class RegistroEntrada {
        - fechaHoraLlegada: Date
        - tipoEntrada: String
        - observaciones: String
    }

    class Comunicacion {
        - idComunicacion: String
        - asunto: String
        - contenido: String
        - fechaEnvio: Date
    }

    class CasoFortuito {
        - idCaso: String
        - tipo: String
        - descripcion: String
        - fecha: Date
    }
}

' ==========================================
' RELACIONES ESTRUCTURALES
' ==========================================

' Herencias e Implementaciones Internas
IServicioFinanzas <|.. ServicioFinanzasImpl
IServicioInmuebles <|.. ServicioInmueblesImpl
IServicioReservas <|.. ServicioReservasImpl
IServicioSeguridad <|.. ServicioSeguridadImpl
IServicioComunicaciones <|.. ServicioComunicacionesImpl

IDeudaDAO <|.. DeudaDAOMySQL
IPagoDAO <|.. PagoDAOMySQL
IGastoDAO <|.. GastoDAOMySQL
IInmuebleDAO <|.. InmuebleDAOMySQL
ICasoFortuitoDAO <|.. CasoFortuitoDAOMySQL
IReservaDAO <|.. ReservaDAOMySQL
IAccesoDAO <|.. AccesoDAOMySQL
IVisitaDAO <|.. VisitaDAOMySQL
IMensajeDAO <|.. MensajeDAOMySQL

Inmueble <|-- UnidadPrivada
Inmueble <|-- EspacioComun
Inmueble "1" *-- "1" Caracteristica
EspacioComun <|-- SalonDeEventos
EspacioComun <|-- AreaRecreacional
EspacioComun <|-- Parqueadero

Usuario "1" --> "*" Deuda
Deuda "1" *-- "*" Pago
Reserva "*" --> "1" EspacioComun
Usuario "1" --> "*" Reserva
VisitaProgramada "*" --> "1" Visitante
RegistroEntrada "0..1" <-- "1" VisitaProgramada
Usuario "1" --> "*" VisitaProgramada

' Interaccion de Controladores a Servicios
ControladorDeudas --> IServicioFinanzas
ControladorPagosGastos --> IServicioFinanzas
ControladorReportesFinancieros --> IServicioFinanzas
ControladorInmuebles --> IServicioInmuebles
ControladorCasosFortuitos --> IServicioInmuebles
ControladorReservas --> IServicioReservas
ControladorGarita --> IServicioSeguridad
ControladorComunicaciones --> IServicioComunicaciones

' Interaccion de Servicios a DAOs
ServicioFinanzasImpl --> IDeudaDAO
ServicioFinanzasImpl --> IPagoDAO
ServicioFinanzasImpl --> IGastoDAO
ServicioInmueblesImpl --> IInmuebleDAO
ServicioInmueblesImpl --> ICasoFortuitoDAO
ServicioReservasImpl --> IReservaDAO
ServicioSeguridadImpl --> IAccesoDAO
ServicioSeguridadImpl --> IVisitaDAO
ServicioComunicacionesImpl --> IMensajeDAO

' Orquestacion Externa
ServicioReservasImpl --> IServicioFinanzas : "<<usa para multas>>"
SistemaAutomatizadoScheduler --> IServicioFinanzas : "<<dispara eventos>>"

' Dependencias de Uso hacia el Dominio
"Capa de Logica de Negocio (Servicios)" ..> "Capa de Dominio (Entidades)"
"Capa de Acceso a Datos (DAOs)" ..> "Capa de Dominio (Entidades)"

@enduml